--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "v3.0 Default"
 
 contact:
-  message: "Bank System - Account API"
+  message: "CAMBIAMOS EL DEFAULT Bank System - Account API"
   details:
     name: "Jhon Baeden."
     email: "JhonBaeden@hotmail.com"
